--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vitest/ui": "^2.1.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "vite": "^5.3.1",
